# qoqo

./: .buildinfo  .coverage  .flake8  .gitignore  .mypy.ini  .readthedocs.yaml  404.html  CHANGELOG.md  CITATION.cff  CONTRIBUTE.md  Cargo.toml  README.md  add_new_gate.md  backends.html  conventions.html  deny.toml  devices.html  genindex.html  index.html  installation.html  introduction.html  modules.html  objects.inv  print.html  py-modindex.html  requirements.html  requirements.txt  search.html  searchindex.js  searchindex.json  setup.py  toc.html  toc.js
.compatability_tests/compatibility_test/: Cargo.toml
.compatibility_tests/compatibility_test_1_0/: Cargo.toml
.compatibility_tests/compatibility_test_1_0/tests/integration/: compatibility_1_0.rs  main.rs
.compatibility_tests/compatibility_test_1_12/: Cargo.toml
.compatibility_tests/compatibility_test_1_12/tests/integration/: compatibility_1_12.rs  main.rs
.compatibility_tests/compatibility_test_1_14/: Cargo.toml
.compatibility_tests/compatibility_test_1_15/: Cargo.toml
.compatibility_tests/compatibility_test_1_17/: Cargo.toml
.compatibility_tests/compatibility_test_1_18/: Cargo.toml
.compatibility_tests/compatibility_test_1_5/: Cargo.toml
.compatibility_tests/compatibility_test_1_9/: Cargo.toml
.compatibility_tests/compatibility_test_sim/: Cargo.toml
doc/: conf.py  (+2 more)
qoqo/: Cargo.toml  README.md  README_qoqo.md  __init__.py  __version__.py  build.rs  pyproject.toml
qoqo-macros/: Cargo.toml  LICENSE
qoqo-macros/src/: devices.rs  lib.rs  noise_models.rs  operate.rs
qoqo/backends/: __init__.py  _backend_base_class.py
qoqo/circuit/: __init__.py  circuit.py
qoqo/devices/: __init__.py  _devices_abstract_base_class.py
qoqo/do_unitary/: __init__.py  do_unitary.py
qoqo/docs/: Makefile  conf.py  index.rst  requirements.txt
qoqo/examples/: Intro_to_qoqo.ipynb  Measurement_Example.ipynb  Simple_VHA_with_qoqo.ipynb  Teleportation_Example.ipynb  requirements.txt
qoqo/measurements/: __init__.py  _measurement_base_class.py  basis_rotation_measurement.py  cheated_basis_rotation_measurement.py  cheated_measurement.py  measurement_auxiliary_data_input.py
qoqo/operations/: __init__.py  _operations_base_classes.py  define_operations.py  measurement_operations.py  pragma_operations.py  single_qubit_gate_operations.py  two_qubit_gate_operations.py
qoqo/python/qoqo/: DEPENDENCIES  LICENSE_FOR_BINARY_DISTRIBUTION  PYTHON_LICENSE  __init__.py  devices.pyi  measurements.pyi  noise_models.pyi  operations.pyi  qoqo.pyi
qoqo/python_tests/: README.md  test_circuit.py  test_circuit_init.py
qoqo/qoqo/: DEPENDENCIES  LICENSE_FOR_BINARY_DISTRIBUTION  PYTHON_LICENSE  __init__.py  devices.pyi  measurements.pyi  noise_models.pyi  operations.pyi  qoqo.pyi
qoqo/qoqo/do_unitary/: __init__.py  do_unitary.py
qoqo/registers/: __init__.py  registers.py
qoqo/src/: circuit.rs  circuitdag.rs  devices.rs  lib.rs  quantum_program.rs
qoqo/src/devices/: all_to_all.rs  generic_device.rs  mod.rs  square_lattice.rs
qoqo/src/measurements/: basis_rotation_measurement.rs  cheated_basis_rotation_measurement.rs  cheated_measurement.rs  classical_register_measurement.rs  measurement_auxiliary_data_input.rs  mod.rs
qoqo/src/noise_models/: continuous_decoherence.rs  decoherence_on_gate.rs  decoherence_on_idle.rs  error_on_gate.rs  imperfect_readout.rs  mod.rs  overrotation.rs
qoqo/src/operations/: _auto_generated_operation_conversion.rs  analog_operations.rs  bosonic_operations.rs  define_operations.rs  four_qubit_gate_operations.rs  measurement_operations.rs  mod.rs  multi_qubit_gate_operations.rs  pragma_operations.rs  single_qubit_gate_operations.rs  spin_boson_operations.rs  three_qubit_gate_operations.rs  two_qubit_gate_operations.rs
qoqo/tests/integration/: circuit.rs  circuitdag.rs  devices.rs  doc.rs  main.rs  quantum_program.rs
roqoqo/: Cargo.toml  README.md  README_roqoqo.md  build.rs  katex.html  lcov.info
roqoqo-derive/: Cargo.toml  LICENSE
roqoqo-derive/src/: involve_modes.rs  involve_qubits.rs  lib.rs  operate.rs  operate_analog.rs  operate_n_mode.rs  operate_n_qubit.rs  operate_unitary.rs  operate_unitary_modes.rs  substitute.rs  substitute_modes.rs  supported_version.rs
roqoqo-test/: Cargo.toml  LICENSE
roqoqo-test/src/: lib.rs  stochastic_gate_test.rs
roqoqo-test/tests/: main.rs  stochastic_gate_test.rs
roqoqo/coveragehtml/: index-sort-f.html  index-sort-l.html  index.html
roqoqo/coveragehtml/src/: backends.rs.func-sort-c.html  backends.rs.func.html  backends.rs.gcov.html  circuit.rs.func-sort-c.html  circuit.rs.func.html  circuit.rs.gcov.html  devices.rs.func-sort-c.html  devices.rs.func.html  devices.rs.gcov.html  index-sort-f.html  index-sort-l.html  index.html  lib.rs.func-sort-c.html  lib.rs.func.html  lib.rs.gcov.html  quantum_program.rs.func-sort-c.html  quantum_program.rs.func.html  quantum_program.rs.gcov.html
roqoqo/examples/: Intro_to_roqoqo.ipynb  Simple_VHA_with_roqoqo.ipynb  Simple_VHA_with_roqoqo_optimizer.ipynb
roqoqo/src/: backends.rs  circuit.rs  circuitdag.rs  devices.rs  do_unitary.rs  lib.rs  prelude.rs  quantum_program.rs  registers.rs
roqoqo/src/devices/: all_to_all.rs  generic_device.rs  mod.rs  square_lattice.rs
roqoqo/src/measurements/: basis_rotation_measurement.rs  cheated_basis_rotation_measurement.rs  cheated_measurement.rs  classical_register_measurement.rs  measurement_auxiliary_data_input.rs  mod.rs
roqoqo/src/noise_models/: continuous_decoherence.rs  decoherence_on_gate.rs  decoherence_on_idle.rs  error_on_gate.rs  imperfect_readout.rs  mod.rs  overrotation.rs
roqoqo/src/operations/: _auto_generated_operations.rs  analog_operations.rs  bosonic_operations.rs  define_operations.rs  four_qubit_gate_operations.rs  measurement_operations.rs  mod.rs  multi_qubit_gate_operations.rs  pragma_operations.rs  single_qubit_gate_operations.rs  spin_boson_operations.rs  three_qubit_gate_operations.rs  two_qubit_gate_operations.rs
roqoqo/tests/integration/: circuit.rs  circuitdag.rs  compatability.rs  compatibility.rs  devices.rs  main.rs  quantum_program.rs
(+268 files in other folders)
