[workspace]
members = [
    "roqoqo",
    "roqoqo-derive",
    "roqoqo-test",
    "qoqo",
    "qoqo-macros",
]

resolver = "2"

[profile.release]
lto = true

[profile.bench]
lto = true

[patch.crates-io]
qoqo_calculator ={path = "../qoqo_calculator/qoqo_calculator" }
qoqo_calculator_pyo3 ={path = "../qoqo_calculator/qoqo_calculator_pyo3" }
struqture ={path = "../struqture/struqture" }
struqture-py ={path = "../struqture/struqture-py" }
