[workspace]
members = ["roqoqo", "roqoqo-derive", "roqoqo-test", "qoqo", "qoqo-macros"]

resolver = "2"

[profile.release]
lto = true

[profile.bench]
lto = true

[patch.crates-io]
qoqo_calculator = { git = "https://github.com/dberthault/qoqo_calculator.git" }
qoqo_calculator_pyo3 = { git = "https://github.com/dberthault/qoqo_calculator.git" }
struqture = { git = "https://github.com/dberthault/struqture.git" }
struqture-py = { git = "https://github.com/dberthault/struqture.git" }
