[workspace]
members = ["roqoqo", "roqoqo-derive", "roqoqo-test", "qoqo", "qoqo-macros"]

resolver = "2"

[profile.release]
lto = true

[profile.bench]
lto = true

[patch.crates-io]
struqture = { git = "https://github.com/dberthault/struqture.git" }
struqture-py = { git = "https://github.com/dberthault/struqture.git" }
