[package]
name = "qoqo-macros"
version = "0.9.0"
authors = ["HQS Quantum Simulations <info@quantumsimulations.de>"]
license = "Apache-2.0"
readme = "../README.md"
edition = "2021"
rust-version = "1.56"
categories = ["science", "simulation"]
description = "Macros for the qoqo crate"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true
doctest = false

[dependencies]
proc-macro2 = {version="=1.0.29"}
syn = { version = "1.0", features = ["full", "visit"] }
quote = "1.0"
