[package]

version = "1.15.2-alpha.5"
name = "qoqo"
authors = ["HQS Quantum Simulations <info@quantumsimulations.de>"]
license = "Apache-2.0"
homepage = "https://github.com/HQSquantumsimulations/qoqo"
repository = "https://github.com/HQSquantumsimulations/qoqo"
documentation = "https://docs.rs/qoqo/"
readme = "../README.md"
edition = "2021"
rust-version = "1.70"
categories = ["science", "simulation", "development-tools::ffi"]
description = "Quantum computing circuit toolkit. Python interface of roqoqo"
include = [
    "src*",
    "build.rs",
    "qoqo*",
    "LICENSE",
    "README.md",
    "pyproject.toml",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "qoqo"
path = "src/lib.rs"
doctest = false
crate-type = ["cdylib", "rlib"]

[dependencies.pyo3]
version = "0.21"
features = ["num-complex", "multiple-pymethods"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
ndarray = "0.15"
num-complex = "0.4"
thiserror = "1.0"
qoqo_calculator = { version = "~1.2" }
qoqo_calculator_pyo3 = { version = "~1.2", default-features = false }
qoqo-macros = { version = "~1.15.2-alpha.5", path = "../qoqo-macros" }
roqoqo = { version = "~1.15.2-alpha.5", path = "../roqoqo", features = [
    "serialize",
    "overrotate",
] }
struqture = { version = "~1.9" }
struqture-py = { version = "~1.9", default-features = false, features = [
    "unstable_struqture_2_import",
] }
numpy = "0.21"
bincode = "1.3"
serde_json = "1.0"
schemars = "0.8"
clap = "=4.4"

[dev-dependencies]
test-case = "3.0"
nalgebra = "0.32"

[build-dependencies]
quote = "1.0"
syn = { version = "2.0", features = ["full", "visit"] }
proc-macro2 = "1.0"
pyo3-build-config = "0.21"
pyo3 = "0.21"
regex = "1.10"


[package.metadata.docs.rs]
no-default-features = true

[features]
extension-module = ["pyo3/extension-module", "circuitdag"]
default = ["extension-module", "json_schema"]
circuitdag = ["roqoqo/circuitdag"]
json_schema = ["roqoqo/json_schema"]
doc_generator = []
unstable_chain_with_environment = [
    "roqoqo/unstable_chain_with_environment",
    "qoqo-macros/unstable_chain_with_environment",
]
unstable_analog_operations = ["roqoqo/unstable_analog_operations"]
unstable_operation_definition = ["roqoqo/unstable_operation_definition"]
