[package]
version = "1.19.1"
name = "qoqo"
authors = ["HQS Quantum Simulations <info@quantumsimulations.de>"]
license = "Apache-2.0"
homepage = "https://github.com/HQSquantumsimulations/qoqo"
repository = "https://github.com/HQSquantumsimulations/qoqo"
documentation = "https://docs.rs/qoqo/"
readme = "../README.md"
edition = "2021"
rust-version = "1.76"
categories = ["science", "simulation", "development-tools::ffi"]
description = "Quantum computing circuit toolkit. Python interface of roqoqo"
include = [
    "src*",
    "build.rs",
    "qoqo*",
    "LICENSE",
    "README.md",
    "pyproject.toml",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "qoqo"
path = "src/lib.rs"
doctest = false
crate-type = ["cdylib", "rlib"]

[dependencies.pyo3]
version = "0.23"
features = ["num-complex", "multiple-pymethods"]

[dependencies]
qoqo-macros = { version = "~1.19", path = "../qoqo-macros" }
roqoqo = { version = "~1.19", path = "../roqoqo", features = [
    "serialize",
    "overrotate",
] }

qoqo_calculator = "~1.5"
qoqo_calculator_pyo3 = { version = "~1.5", default-features = false }
struqture = "~2.0.0-alpha.11"
struqture-py = { version = "~2.0.0-alpha.11", default-features = false, features = [
    "struqture_1_import",
] }

bincode = "1.3"
ndarray = "0.16"
num-complex = "0.4"
numpy = "0.23"
schemars = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

[dev-dependencies]
nalgebra = "0.33.1"
test-case = "3.0"

[build-dependencies]
proc-macro2 = "1.0"
pyo3-build-config = "0.23"
pyo3 = "0.23"
quote = "1.0"
regex = "1.10"
syn = { version = "2.0", features = ["full", "visit"] }


[package.metadata.docs.rs]
no-default-features = true

[features]
extension-module = ["pyo3/extension-module", "circuitdag"]
default = ["extension-module", "json_schema"]
circuitdag = ["roqoqo/circuitdag"]
overrotate = ["roqoqo/overrotate"]
json_schema = ["roqoqo/json_schema"]
doc_generator = []
unstable_chain_with_environment = [
    "roqoqo/unstable_chain_with_environment",
    "qoqo-macros/unstable_chain_with_environment",
]
unstable_analog_operations = ["roqoqo/unstable_analog_operations"]
unstable_operation_definition = ["roqoqo/unstable_operation_definition"]
unstable_simulation_repetitions = ["roqoqo/unstable_simulation_repetitions"]
