[project]
name = "qoqo"
version = "1.15.2-alpha.2"
dependencies = ['numpy', 'qoqo_calculator_pyo3>=1.2, <1.3']
license = { text = "Apache-2.0 AND Apache-2.0 with LLVM-exception AND MIT AND Unicode-DFS-2016 AND BSD-2-Clause AND BSD-3-CLause" }
maintainers = [
  { name = "HQS Quantum Simulations GmbH", email = "info@quantumsimulations.de" },
]
requires-python = ">=3.8"
readme = "README_qoqo.md"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
bindings = "pyo3"
compatibility = "manylinux2014"
skip-auditwheel = false
strip = true
profile = "release"
python-source = "python"

[project.optional-dependencies]
docs = [
  "sphinx >= 2.1",
  "nbsphinx",
  "pygments",
  "recommonmark",
  "myst_parser",
  "sphinx_rtd_theme",
  "tomli",
]
