[package]
name = "roqoqo-derive"
version = "0.1.6"
authors = ["HQS Quantum Simulations <info@quantumsimulations.de>"]
license = "Apache-2.0"
edition = "2018"
categories = ["science", "simulation"]
readme = "../README.md"
description = "Maros for the roqoqo crate"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true
doctest = false

[dependencies]
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["full", "visit"] }
quote = "1.0"

[features]
default = []
overrotate = []
