[package]
name = "roqoqo-derive"
version = "1.2.4"
authors = ["HQS Quantum Simulations <info@quantumsimulations.de>"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.56"
categories = ["science", "simulation"]
readme = "../README.md"
description = "Macros for the roqoqo crate"
include = ["src*", "LICENSE"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true
doctest = false

[dependencies]
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["full", "visit"] }
quote = "1.0"

[features]
default = []
overrotate = []
