[package]
name = "roqoqo-test"
version = "1.16.1"
authors = ["HQS Quantum Simulations <info@quantumsimulations.de>"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.70"
categories = ["science", "simulation"]
readme = "../README.md"
repository = "https://github.com/HQSquantumsimulations/qoqo"
description = "Testing helper functions for roqoqo toolkit"
include = ["src*", "LICENSE"]

[lib]
name = "roqoqo_test"
path = "src/lib.rs"
doctest = false
crate-type = ["rlib"]

[dependencies]
roqoqo = { version = "~1.16", path = "../roqoqo", features = [
    "serialize",
] }
rand = "~0.8"
nalgebra = "0.33.1"
ndarray = { version = "0.15" }

[build-dependencies]
quote = "1.0"
syn = { version = "2.0", features = ["full", "visit"] }
proc-macro2 = "1.0"
