[package]
name = "roqoqo-test"
version = "1.18.1"
authors = ["HQS Quantum Simulations <info@quantumsimulations.de>"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.76"
categories = ["science", "simulation"]
readme = "../README.md"
repository = "https://github.com/HQSquantumsimulations/qoqo"
description = "Testing helper functions for roqoqo toolkit"
include = ["src*", "LICENSE"]

[lib]
name = "roqoqo_test"
path = "src/lib.rs"
doctest = false
crate-type = ["rlib"]

[dependencies]
roqoqo = { version = "~1.18", path = "../roqoqo", features = ["serialize"] }

nalgebra = "0.33.1"
ndarray = "0.16"
rand = "~0.9"

[build-dependencies]
syn = { version = "2.0", features = ["full", "visit"] }
proc-macro2 = "1.0"
quote = "1.0"
