[package]
name = "roqoqo-test"
version = "1.22.2"
authors = ["HQS Quantum Simulations <info@quantumsimulations.de>"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.76"
categories = ["science", "simulation"]
readme = "../README.md"
repository = "https://github.com/HQSquantumsimulations/qoqo"
description = "Testing helper functions for roqoqo toolkit"
include = ["src*", "LICENSE"]

[lib]
name = "roqoqo_test"
path = "src/lib.rs"
doctest = false
crate-type = ["rlib"]

[dependencies]
roqoqo = { version = "1.22", path = "../roqoqo", features = ["serialize"] }

nalgebra = "0.35"
ndarray = "0.17"
rand = "0.10"

[build-dependencies]
syn = { version = "2.0", features = ["full", "visit"] }
proc-macro2 = "1.0"
quote = "1.0"
