[package]
name = "roqoqo"
version = "0.6.0"
authors = ["HQS Quantum Simulations <info@quantumsimulations.de>"]
license = "Apache-2.0"
edition = "2018"
categories = ["science", "simulation"]
homepage = "https://github.com/HQSquantumsimulations/qoqo"
repository = "https://github.com/HQSquantumsimulations/qoqo"
documentation = "https://docs.rs/roqoqo/"
readme = "../README.md"
description = "Rust Quantum Computing Toolkit by HQS"
exclude = ["tests*", "examples*", "docs*", "*.code-workspace"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "roqoqo"
path = "src/lib.rs"
doctest = false

[dependencies]
serde = { version = "1.0", features = ["derive"], optional=true}
ndarray = { version = "0.15" }
num-complex = { version = "0.4"}
thiserror = "1.0"
dyn-clone = {version="1.0", optional=true}
qoqo_calculator = { version="0.3"}
roqoqo-derive = {version="0.6", path="../roqoqo-derive"}
typetag = {version="0.1", optional=true}
nalgebra = "0.29"
bincode = {version="1.3", optional=true}
#sprs = {version="0.10"}

rand_distr = {version="0.4", optional=true}
rand = {version="0.8", optional=true}

[dev-dependencies]
serde_test = {version="1.0"}
test-case = "1.1.0"

[build-dependencies]
quote = "1.0"
syn = { version = "1.0", features = ["full", "visit"] }
proc-macro2 = "1.0"

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "katex.html", "--document-private-items" ]

[features]
default = ["serialize"]
dynamic = ["typetag", "dyn-clone"]
serialize = ["serde", "ndarray/serde", "num-complex/serde", "bincode"]
overrotate = ["rand", "rand_distr", "roqoqo-derive/overrotate"]

