[package]
name = "roqoqo"
version = "1.9.1"
authors = ["HQS Quantum Simulations <info@quantumsimulations.de>"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.56"
categories = ["science", "simulation"]
homepage = "https://github.com/HQSquantumsimulations/qoqo"
repository = "https://github.com/HQSquantumsimulations/qoqo"
documentation = "https://docs.rs/roqoqo/"
readme = "../README.md"
description = "Rust Quantum Computing Toolkit by HQS"
include = ["src*", "build.rs", "LICENSE", "README.md"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "roqoqo"
path = "src/lib.rs"
doctest = false

[dependencies]
serde = { version = "1.0", features = ["derive"], optional=true}
ndarray = { version = "0.15" }
num-complex = { version = "0.4"}
thiserror = "1.0"
dyn-clone = {version="1.0", optional=true}
qoqo_calculator = { version="1.1"}
roqoqo-derive = {version="1.9", path="../roqoqo-derive"}
typetag = {version="0.2", optional=true}
nalgebra = "0.32"
schemars = { version="0.8", optional=true }
jsonschema = { version="0.17", optional=true }
rand_distr = {version="0.4", optional=true}
rand = { version = "0.8.4"}
async-trait = {version = "0.1", optional = true}
futures ={version = "0.3", optional=true}
petgraph = {version = "0.6.2", optional=true}
bincode = {version="1.3", optional=true}
struqture = {version = "1.5"}

[dev-dependencies]
serde_test = "1.0"
test-case = "3.0"
serde_json = "1.0"

[build-dependencies]
quote = "1.0"
syn = { version = "2.0", features = ["full", "visit"] }
proc-macro2 = "1.0"
rand = {version="0.8"}

[package.metadata.docs.rs]
rustdoc-args = ["--document-private-items" ]

[features]
default = ["serialize", "circuitdag"]
dynamic = ["typetag", "dyn-clone"]
unstable_qoqo_devices = []
serialize = ["serde", "ndarray/serde", "num-complex/serde", "bincode", "petgraph/serde-1"]
overrotate = [ "rand_distr", "roqoqo-derive/overrotate"]
async = ["async-trait", "futures"]
json_schema=["schemars", "serialize", "qoqo_calculator/json_schema", "jsonschema"]
circuitdag = ["petgraph"]
unstable_chain_with_environment = []