[package]
name = "roqoqo"
version = "1.19.2"
authors = ["HQS Quantum Simulations <info@quantumsimulations.de>"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.76"
categories = ["science", "simulation"]
homepage = "https://github.com/HQSquantumsimulations/qoqo"
repository = "https://github.com/HQSquantumsimulations/qoqo"
documentation = "https://docs.rs/roqoqo/"
readme = "README_roqoqo.md"
description = "Rust Quantum Computing Toolkit by HQS"
include = ["src*", "build.rs", "LICENSE", "README.md"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "roqoqo"
path = "src/lib.rs"
doctest = false

[dependencies]
roqoqo-derive = { version = "~1.19", path = "../roqoqo-derive" }

qoqo_calculator = "~1.5"
struqture = { version = "~2.0.0-alpha.11", features = ["json_schema", "struqture_1_export", "struqture_1_import"] }
struqture_1 = { package = "struqture", version = "1.12" }

nalgebra = "0.33.1"
ndarray = "0.16"
num-complex = "0.4"
rand = "~0.9"
thiserror = "2.0"
async-trait = { version = "0.1", optional = true }
bincode = { version = "1.3", optional = true }
dyn-clone = { version = "1.0", optional = true }
jsonschema = { version = "0.29", optional = true }
futures = { version = "0.3", optional = true }
petgraph = { version = "0.7", optional = true }
rand_distr = { version = "0.5", optional = true }
schemars = { version = "0.8", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
typetag = { version = "0.2", optional = true }

[dev-dependencies]
serde_json = "1.0"
serde_test = "1.0"
test-case = "3.0"

[build-dependencies]
proc-macro2 = "1.0"
quote = "1.0"
rand = "~0.9"
syn = { version = "2.0", features = ["full", "visit"] }

[package.metadata.docs.rs]
rustdoc-args = ["--document-private-items"]

[features]
default = ["serialize", "circuitdag"]
dynamic = ["typetag", "dyn-clone"]
unstable_qoqo_devices = []
serialize = [
    "serde",
    "ndarray/serde",
    "num-complex/serde",
    "bincode",
    "petgraph/serde-1",
]
overrotate = ["rand_distr", "roqoqo-derive/overrotate"]
async = ["async-trait", "futures"]
json_schema = [
    "schemars",
    "serialize",
    "qoqo_calculator/json_schema",
    "jsonschema",
]
circuitdag = ["petgraph"]
unstable_chain_with_environment = []
unstable_analog_operations = []
unstable_operation_definition = []
unstable_simulation_repetitions = []
