[package]
name = "compatibility_test_1_12"
version = "1.18.1"
authors = ["HQS Quantum Simulations <info@quantumsimulations.de>"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.76"
categories = ["science", "simulation"]
homepage = "https://github.com/HQSquantumsimulations/qoqo"
repository = "https://github.com/HQSquantumsimulations/qoqo"
documentation = "https://docs.rs/roqoqo/"
readme = "../README.md"
description = "Compatibility tests for roqoqo"
include = ["src*", "build.rs", "LICENSE", "README.md"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

[dependencies]
test_roqoqo_1_12 = { package = "roqoqo", version = "=1.12.1" }
roqoqo = { version = "~1.18", path = "../../roqoqo", features = [
    "serialize",
    "overrotate",
] }
bincode = { version = "1.3" }
ndarray = "0.15"

[dev-dependencies]
test-case = "3.0"
