[package]
name = "compatibility_test_1_14"
version = "1.18.1"
authors = ["HQS Quantum Simulations <info@quantumsimulations.de>"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.76"
categories = ["science", "simulation"]
homepage = "https://github.com/HQSquantumsimulations/qoqo"
repository = "https://github.com/HQSquantumsimulations/qoqo"
documentation = "https://docs.rs/roqoqo/"
readme = "../README.md"
description = "Compatibility tests for roqoqo"
include = ["src*", "build.rs", "LICENSE", "README.md"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

[dependencies]
test_roqoqo_1_14 = { package = "roqoqo", version = "=1.14.0" }
roqoqo = { version = "~1.18", path = "../../roqoqo", features = [
    "serialize",
    "overrotate",
] }
struqture = { git = "https://github.com/HQSquantumsimulations/struqture" }
struqture_1_7 = { git = "https://github.com/HQSquantumsimulations/struqture", package = "struqture", tag = "v1.7.1" }
bincode = { version = "1.3" }
ndarray = "0.15"
qoqo_calculator = { git = "https://github.com/HQSquantumsimulations/qoqo_calculator" }
qoqo_calculator_1_2 = { git = "https://github.com/HQSquantumsimulations/qoqo_calculator", package = "qoqo_calculator", tag = "v1.2.4" }

[patch.crates-io]
struqture = { git = "https://github.com/HQSquantumsimulations/struqture" }
struqture_1_7 = { git = "https://github.com/HQSquantumsimulations/struqture", package = "struqture", tag = "v1.7.1" }
qoqo_calculator = { git = "https://github.com/HQSquantumsimulations/qoqo_calculator" }
qoqo_calculator_1_2 = { git = "https://github.com/HQSquantumsimulations/qoqo_calculator", package = "qoqo_calculator", tag = "v1.2.4" }

[dev-dependencies]
test-case = "3.0"
