[package]
name = "compatibility_test_1_18"
version = "1.20.1"
authors = ["HQS Quantum Simulations <info@quantumsimulations.de>"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.76"
categories = ["science", "simulation"]
homepage = "https://github.com/HQSquantumsimulations/qoqo"
repository = "https://github.com/HQSquantumsimulations/qoqo"
documentation = "https://docs.rs/roqoqo/"
readme = "../README.md"
description = "Compatibility tests for roqoqo"
include = ["src*", "build.rs", "LICENSE", "README.md"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

[dependencies]
test_roqoqo_1_18 = { package = "roqoqo", version = "=1.18.0" }
roqoqo = { version = "1.21", path = "../../roqoqo", features = [
    "serialize",
    "overrotate",
] }
struqture_1_11 = { git = "https://github.com/HQSquantumsimulations/struqture", package = "struqture", tag = "v1.11.2" }
bincode = { version = "2.0" }
ndarray = "0.16"
qoqo_calculator_1_4 = { git = "https://github.com/HQSquantumsimulations/qoqo_calculator", package = "qoqo_calculator", tag = "v1.4.4" }

[patch.crates-io]
struqture_1_11 = { git = "https://github.com/HQSquantumsimulations/struqture", package = "struqture", tag = "v1.11.2" }
qoqo_calculator_1_4 = { git = "https://github.com/HQSquantumsimulations/qoqo_calculator", package = "qoqo_calculator", tag = "v1.4.4" }

[dev-dependencies]
test-case = "3.0"
