[package]
name = "compatibility_test_1_5"
version = "1.12.0"
authors = ["HQS Quantum Simulations <info@quantumsimulations.de>"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.56"
categories = ["science", "simulation"]
homepage = "https://github.com/HQSquantumsimulations/qoqo"
repository = "https://github.com/HQSquantumsimulations/qoqo"
documentation = "https://docs.rs/roqoqo/"
readme = "../README.md"
description = "Compatibility tests for roqoqo"
include = ["src*", "build.rs", "LICENSE", "README.md"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

[patch.crates-io]
qoqo_calculator = { git = "https://github.com/dberthault/qoqo_calculator.git" }
qoqo_calculator_pyo3 = { git = "https://github.com/dberthault/qoqo_calculator.git" }
struqture = { git = "https://github.com/dberthault/struqture.git" }
struqture-py = { git = "https://github.com/dberthault/struqture.git" }

[dependencies]
test_roqoqo_1_5 = { package = "roqoqo", version = "=1.5.0" }
test_roqoqo_derive_1_5 = { package = "roqoqo-derive", version = "=1.5.0" }
qoqo_calculator = { version = "1.1" }
roqoqo = { version = "1.12.0", path = "../../roqoqo", features = [
    "serialize",
    "overrotate",
] }
bincode = { version = "1.3" }
ndarray = "0.15"

[dev-dependencies]
test-case = "3.0"
